<?xml version="1.0"?>
<package>
  <name>roch_viz</name>
  <version>1.0.10</version>
  <description>Visualization configuration for SawYer roch</description>

  <author email="wzhang@softrobtech.com">Carl</author>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roch_viz</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_viz/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_viz</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roslaunch</build_depend>

  <run_depend>roch_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>
<!--  <run_depend>roch_bringup</run_depend> --> <!-- Comment this due to circle dependenices. -->
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
